--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "@types/react": "18.0.21",
     "react": "18.2.0",
     "typescript": "4.8.4"
+  },
+  "dependencies": {
+    "@stein197/ts-util": "1.6.0"
   }
 }
