--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "Set of common UI components for React",
   "main": "index.js",
+  "scripts": {
+    "compile": "tsc"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/stein197/react-ui.git"
