--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Set of common UI components for React",
   "main": "index.js",
   "scripts": {
-    "compile": "tsc"
+    "clean": "del .\\*.js .\\*.d.ts .\\*.map",
+    "build": "tsc",
+	"build:test": "microbundle --tsconfig tsconfig.dev.json -i index.test.tsx -o index.test.js -f iife --no-generateTypes --no-pkg-main --define process.env.NODE_ENV=development"
   },
   "repository": {
     "type": "git",
@@ -25,7 +27,10 @@
   "homepage": "https://github.com/stein197/react-ui#readme",
   "devDependencies": {
     "@types/react": "18.0.21",
+    "@types/react-dom": "18.0.8",
+    "microbundle": "0.15.1",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "typescript": "4.8.4"
   },
   "dependencies": {
