--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,17 @@
 {
 	"compilerOptions": {
 		"outDir": ".",
-		"target": "ESNext",
-		"jsx": "react-jsx",
-		"strict": true,
 		"rootDir": "src",
+		"strict": true,
 		"declaration": true,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
-		"allowUnusedLabels": false,
-		"moduleResolution": "node",
-		"allowSyntheticDefaultImports": true,
-		"resolveJsonModule": true,
 		"importsNotUsedAsValues": "error"
 	},
+	"extends": "./tsconfig.dev.json",
+	"files": [],
 	"exclude": [],
 	"include": [
-		"**/*.ts",
-		"**/*.tsx"
+		"src/*.tsx"
 	]
 }
