--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "clean": "del .\\*.js .\\*.d.ts .\\*.map",
     "build": "tsc",
-	"build:test": "microbundle --tsconfig tsconfig.dev.json -i index.test.tsx -o index.test.js -f iife --no-generateTypes --no-pkg-main --define process.env.NODE_ENV=development"
+    "build:test": "microbundle --tsconfig tsconfig.dev.json -i index.test.tsx -o index.test.js -f iife --no-generateTypes --no-pkg-main --define process.env.NODE_ENV=development -w"
   },
   "repository": {
     "type": "git",
