--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "Set of common UI components for React",
   "main": "index.js",
   "scripts": {
-    "clean": "del .\\*.js .\\*.d.ts .\\*.map .\\demo\\*.js 2>nul",
+    "clean": "del .\\*.js .\\*.d.ts .\\demo\\*.js .\\demo\\*.map 2>nul",
     "build": "tsc",
-    "demo": "microbundle --tsconfig tsconfig.dev.json -i demo/index.tsx -o demo/index.js -f iife --no-generateTypes --no-pkg-main --define process.env.NODE_ENV=development -w"
+    "demo": "microbundle --tsconfig tsconfig.dev.json -i demo/index.tsx -o demo/index.js -f iife --no-generateTypes --no-pkg-main --define process.env.NODE_ENV=development --external=none",
+    "demo:watch": "microbundle --tsconfig tsconfig.dev.json -i demo/index.tsx -o demo/index.js -f iife --no-generateTypes --no-pkg-main --define process.env.NODE_ENV=development --external=none -w"
   },
   "repository": {
     "type": "git",
