--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
 		"strict": true,
 		"declaration": true,
 		"noUnusedLocals": true,
-		"noUnusedParameters": true,
+		"noUnusedParameters": false,
 		"importsNotUsedAsValues": "error"
 	},
 	"extends": "./tsconfig.dev.json",
