--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "index.js",
   "scripts": {
     "clean": "del .\\*.js .\\*.d.ts .\\demo\\*.js .\\demo\\*.map 2>nul",
-    "build": "tsc",
-    "demo": "microbundle --tsconfig tsconfig.dev.json -i demo/index.tsx -o demo/index.js -f iife --no-generateTypes --no-pkg-main --define process.env.NODE_ENV=development --external=none --jsx=React.createElement --jsxFragment=React.Fragment",
-    "demo:watch": "microbundle --tsconfig tsconfig.dev.json -i demo/index.tsx -o demo/index.js -f iife --no-generateTypes --no-pkg-main --define process.env.NODE_ENV=development --external=none --jsx=React.createElement --jsxFragment=React.Fragment -w"
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -27,11 +25,7 @@
   },
   "homepage": "https://github.com/stein197/react-ui#readme",
   "devDependencies": {
-    "@types/react": "18.0.21",
-    "@types/react-dom": "18.0.8",
-    "microbundle": "0.15.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "@types/react": "18.0.25",
     "typescript": "4.8.4"
   },
   "dependencies": {
