--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "clean": "del .\\*.js .\\*.d.ts .\\demo\\*.js .\\demo\\*.css .\\demo\\*.map .\\*.tgz 2>nul",
-    "build": "tsc"
+    "build": "tsc",
+    "test": "ts-mocha test/*.tsx"
   },
   "repository": {
     "type": "git",
@@ -25,7 +26,16 @@
   },
   "homepage": "https://github.com/stein197/react-ui#readme",
   "devDependencies": {
+    "@types/jsdom": "20.0.1",
+    "@types/mocha": "10.0.0",
+    "@types/node": "18.11.9",
     "@types/react": "18.0.25",
+    "@types/react-dom": "18.0.9",
+    "jsdom": "20.0.2",
+    "mocha": "10.1.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "ts-mocha": "10.0.0",
     "typescript": "4.8.4"
   },
   "dependencies": {
