--- a/demo/package.json
+++ b/demo/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "@stein197/react-ui": "file:../stein197-react-ui-1.3.0.tgz",
+    "@stein197/util": "1.11.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
