--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Set of common UI components for React",
   "main": "index.js",
   "scripts": {
-    "clean": "del .\\*.js .\\*.d.ts .\\demo\\*.js .\\demo\\*.css .\\demo\\*.map .\\*.tgz 2>nul",
+    "clean": "del .\\*.js .\\*.d.ts .\\*.map .\\demo\\*.js .\\demo\\*.css .\\demo\\*.map .\\*.tgz 2>nul",
     "build": "tsc",
     "test": "ts-mocha test/*.tsx"
   },
